Made small tweaks to the front end

--- a/LoginApplication/Views/Account/Edit.cshtml
+++ b/LoginApplication/Views/Account/Edit.cshtml
@@ -1,15 +1,17 @@
 ﻿@model LoginApplication.Models.UserAccount
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Edit";
 }
 
 @using (Html.BeginForm())
 {
 
-<p>
-    Here is your new password <b>@Model.Password</b> please remember it only lasts 30 seconds.  
-</p>
+    <br />
+    <br />
+    <p>
+        Here is your new password <b>@Model.Password</b> please remember it only lasts 30 seconds.  
+    </p>
 }
 
 
