--- a/LoginApplication/Views/Account/Login.cshtml
+++ b/LoginApplication/Views/Account/Login.cshtml
@@ -18,7 +18,7 @@
         @if (ViewBag.Message != null)
         {
             <div class="form-group">
-                <div class="col-md-10">Please click Your Password has expired please click @Html.ActionLink("here", "Edit", Model) to generate a new one to generate a new one.</div>
+                <div class="col-md-10 text-danger">@ViewBag.Message please click @Html.ActionLink("here", "Edit", Model) to generate a new one.</div>
             </div>
         }
         <div class="form-group">
@@ -32,7 +32,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
