--- a/LoginApplication/Views/Account/Index.cshtml
+++ b/LoginApplication/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LoginApplication.Models.UserAccount>
+﻿@model IEnumerable<PasswordGenerator.Models.UserAccount>
 
 @{
     ViewBag.Title = "Index";
