Modified how it works a little more

--- a/PasswordGenerator/Views/Shared/_Layout.cshtml
+++ b/PasswordGenerator/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Register", "Register", "Account")</li>
-                    <li>@Html.ActionLink("Login", "Login", "Account")</li>
+                    <li>@Html.ActionLink("Generate Password", "Register", "Account")</li>
+                    <li>@Html.ActionLink("Validate", "Validate", "Account")</li>
                 </ul>
             </div>
         </div>
