--- a/PasswordGenerator/Views/Account/Register.cshtml
+++ b/PasswordGenerator/Views/Account/Register.cshtml
@@ -6,7 +6,6 @@
 
 @section Scripts {
 
-    <script type="text/javascript" src="~/Scripts/timer.js"></script>
 
     @Scripts.Render("~/bundles/jqueryval")
 }
@@ -25,12 +24,11 @@
         @if (ViewBag.Message != null)
         {
             <div class="form-group">
-                @if (Model != null)
-                { <p>Here is your password: <b>@Model.Password</b></p> }
-                <p id="download">Your password has expired. Please click @Html.ActionLink("here", "Edit", "Account", new { userId = Model.UserId }, null) to generate a new one.</p>
-                <br />
-                @*<div class="col-md-10">Please click @Html.ActionLink("here", "Login", "Account") to login.</div>*@
-                </div>
+            @if (Model != null)
+            { <p>Here is your password: <b>@Model.Password</b></p> }
+                <p>Your password will only be valid for 30 seconds.</p>
+                <p id="validate">Please click @Html.ActionLink("here", "Validate", "Account", new { userId = Model.UserId, password = Model.Password }, null) to check if your password is still valid</p>
+            </div>
         }
         <div class="form-group">
             @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
