General maintenance and tweaks

--- a/PasswordGenerator/Views/Home/Index.cshtml
+++ b/PasswordGenerator/Views/Home/Index.cshtml
@@ -3,10 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>Login System</h1>
+    <h1>Password Generator</h1>
 
-    <p>If you already have an account please @Html.ActionLink("login", "Login", "Account") here</p>
     <br />
-    <p>If you don't have an account please click @Html.ActionLink("here", "Register", "Account") </p>
+    <p>Please click @Html.ActionLink("here", "Register", "Account") to generate a password. </p>
 </div>
 
